# monitoring_and_automation

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  telegraf.conf
backend/src/: automate.py  operations.py  profile.json
frontend/monitoring-and-automation/: index.html
frontend/monitoring-and-automation/src/: App.vue
frontend/monitoring-and-automation/src/components/: ButtonPanel.vue
